fix: first '_' character not shown in menu item (#313)

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -781,7 +781,7 @@
                                     ContentTemplate="{TemplateBinding HeaderTemplate}"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Stretch"
-                                    RecognizesAccessKey="True"/>
+                                    RecognizesAccessKey="False"/>
                   <TextBlock x:Name="PART_InputGestureText"
                              Grid.Column="2"
                              Classes="CaptionTextBlockStyle"
