--- a/src/Views/CommitDetail.axaml
+++ b/src/Views/CommitDetail.axaml
@@ -19,7 +19,9 @@
       <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
         <StackPanel Orientation="Vertical">
           <!-- Base Information -->
-          <v:CommitBaseInfo Content="{Binding Commit}" Message="{Binding FullMessage}"/>
+          <v:CommitBaseInfo Content="{Binding Commit}" 
+                            Message="{Binding FullMessage}"
+                            IssueTrackerSetting="{Binding IssueTrackerSetting}"/>
 
           <!-- Line -->
           <Rectangle Height=".65" Margin="8" Fill="{DynamicResource Brush.Border2}"/>
