--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:m="using:SourceGit.Models"
                     xmlns:vm="using:SourceGit.ViewModels"
                     xmlns:v="using:SourceGit.Views"
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -141,7 +142,7 @@
                 </ListBox.ItemsPanel>
 
                 <ListBox.ItemTemplate>
-                  <DataTemplate DataType="vm:IssueTrackerRule">
+                  <DataTemplate DataType="m:IssueTrackerRule">
                     <TextBlock Grid.Column="1" Text="{Binding Name}" Margin="8,0" TextTrimming="CharacterEllipsis"/>
                   </DataTemplate>
                 </ListBox.ItemTemplate>
@@ -187,7 +188,7 @@
             </ContentControl.Content>
             
             <ContentControl.DataTemplates>
-              <DataTemplate DataType="vm:IssueTrackerRule">
+              <DataTemplate DataType="m:IssueTrackerRule">
                 <Grid Grid.Column="1" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
                   <TextBlock Grid.Row="0" Text="{DynamicResource Text.Configure.IssueTracker.RuleName}"/>
                   <TextBox Grid.Row="1" CornerRadius="3" Height="28" Text="{Binding Name, Mode=TwoWay}"/>
