--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -27,10 +27,12 @@
                 ColumnHeaderHeight="24"
                 HorizontalScrollBarVisibility="Disabled"
                 VerticalScrollBarVisibility="Auto"
+                ClipboardCopyMode="None"
                 LayoutUpdated="OnCommitDataGridLayoutUpdated"
                 SelectionChanged="OnCommitDataGridSelectionChanged"
                 ContextRequested="OnCommitDataGridContextRequested"
-                DoubleTapped="OnCommitDataGridDoubleTapped">
+                DoubleTapped="OnCommitDataGridDoubleTapped"
+                KeyDown="OnCommitDataGridKeyDown">
         <DataGrid.Styles>
           <Style Selector="DataGridColumnHeader">
             <Setter Property="MinHeight" Value="24"/>
