feature: show issue link on commit list of histories view (#315)

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -82,10 +82,11 @@
                                            FontSize="10"
                                            VerticalAlignment="Center"/>
 
-                    <TextBlock Classes="primary" 
-                               Text="{Binding Subject}"
-                               Opacity="{Binding Opacity}"
-                               FontWeight="{Binding FontWeight}"/>
+                    <v:CommitSubjectPresenter Classes="primary" 
+                                              Subject="{Binding Subject}"
+                                              IssueTrackerRules="{Binding $parent[v:Histories].((vm:Histories)DataContext).IssueTrackerRules}"
+                                              Opacity="{Binding Opacity}"
+                                              FontWeight="{Binding FontWeight}"/>
                   </StackPanel>
                 </Border>
               </DataTemplate>
