ux: add `Color.Link` for issue links (#315)

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -278,7 +278,7 @@
     <Setter Property="HorizontalAlignment" Value="Right"/>
   </Style>
   <Style Selector="TextBlock.issue_link">
-    <Setter Property="Foreground" Value="{DynamicResource Brush.Accent}"/>
+    <Setter Property="Foreground" Value="{DynamicResource Brush.Link}"/>
     <Setter Property="Cursor" Value="Hand"/>
   </Style>
   <Style Selector="TextBlock.issue_link:pointerover">
