--- a/src/Views/FileHistories.axaml
+++ b/src/Views/FileHistories.axaml
@@ -26,9 +26,7 @@
               Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
               DoubleTapped="MaximizeOrRestoreWindow"
-              PointerPressed="BeginMoveWindow"
-              PointerMoved="MoveWindow"
-              PointerReleased="EndMoveWindow"/>
+              PointerPressed="BeginMoveWindow"/>
 
       <!-- Caption Buttons (macOS) -->
       <Border Grid.Column="0" IsVisible="{OnPlatform False, macOS=True}">
