--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -84,7 +84,7 @@
 
                     <v:CommitSubjectPresenter Classes="primary" 
                                               Subject="{Binding Subject}"
-                                              IssueTrackerRules="{Binding $parent[v:Histories].((vm:Histories)DataContext).IssueTrackerRules}"
+                                              IssueTrackerRules="{Binding $parent[v:Histories].IssueTrackerRules}"
                                               Opacity="{Binding Opacity}"
                                               FontWeight="{Binding FontWeight}"/>
                   </StackPanel>
