ux: use smaller fontsize for launcher tabbar

--- a/src/Views/LauncherTabBar.axaml
+++ b/src/Views/LauncherTabBar.axaml
@@ -65,6 +65,7 @@
                   <TextBlock Grid.Column="1"
                              Classes="primary"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                             FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:DoubleConverters.Decrease}}"
                              TextAlignment="Center"
                              Text="{Binding Node.Name}"
                              IsVisible="{Binding Node.IsRepository}"
@@ -72,6 +73,7 @@
                   <TextBlock Grid.Column="1"
                              Classes="primary"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                             FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:DoubleConverters.Decrease}}"
                              TextAlignment="Center"
                              Text="{DynamicResource Text.PageTabBar.Welcome.Title}"
                              IsVisible="{Binding !Node.IsRepository}"
